Remove support for Java 8.